修改主类问题

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,18 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <includeSystemScope>true</includeSystemScope>
+                    <mainClass>com.example.demo.RecordTimeCloudApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
